day1/provider-resources-firstec2/sg.tf
# Creating a Security Group for application server
resource "aws_security_group" "training-SG" {


  description = "HTTP, PING, SSH"

  name = "training-server-sg-${random_string.tftraining.result}"


  ingress {
    description = "HTTP for application server"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "output from application server"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}
